# sales-automation-backend

./: .env.example  .gitignore  ALL_ENV_VARIABLES.md  API_DOCUMENTATION.md  CONFIG_SIMPLIFIED.md  ENV_VARIABLES_GUIDE.md  GMAIL_MIGRATION_SUMMARY.md  GMAIL_SETUP_GUIDE.md  QUICK_START_GMAIL.md  README.md  README_API.md  RENDER_DEPLOYMENT.md  RENDER_ENV_QUICK_REFERENCE.md  RENDER_ENV_UPLOAD_GUIDE.md  build.sh  generate_gmail_token.py  pyproject.toml  requirements.txt  verify_bulk_load.py
app/: main.py
app/api/: auth.py  dashboard.py  emails.py  health.py  leads.py  router.py
app/api/endpoints/: emails.py  health.py  leads.py
app/core/: __init__.py  apollo_client.py  config.py  emr_estimator.py  neverbounce_verifier.py  nppes_client.py  security.py
app/db/: mongodb.py
app/models/: email.py  lead.py  user.py
app/schemas/: analytics.py  email.py  lead.py
app/services/: analytics.py  email_service.py  lead_service.py  ml_service.py
