[tool.poetry]
name = "sales-automation-backend"
version = "0.1.0"
description = "Backend for Sales Automation with FastAPI and MongoDB"
authors = ["Antigravity"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
motor = "^3.3.2"
beanie = "^1.25.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.1"
email-validator = "^2.1.0"
httpx = "^0.27.0"
google-auth = "^2.16.0"
fastapi-mail = "^1.4.1"
aiosmtplib = "^3.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
